--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "chrome-types": "^0.1.179",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
@@ -40,6 +41,7 @@
     "unplugin-icons": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-pwa": "^0.14.4",
     "vue-tsc": "^1.2.0"
   }
 }
